--- a/Latex/_maintext.tex
+++ b/Latex/_maintext.tex
@@ -99,7 +99,7 @@
 % -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE %
 % =================================================================
 \par
-    Some states in which possible state law challenges could be made will be insulated from those challenges by factors such as the nature of institutional control over the redistricting process in the state, or political gridlock in the state courts. Nonetheless, if a state court does follow the Pennsylvania Supreme Court lead, we view the expected effects on limiting partisan gerrymandering to be potentially greater than we might expect under federal law, since they would involve the overturning of whole plans, not just individual districts -- although, in practice, a finding of overall unconstitutionality is likely to lead to changes only in the most egregiously gerrymandered districts and some of the districts adjacent to them. 
+    Some states in which possible state law challenges could be made will be insulated from those challenges by factors such as the nature of institutional control over the redistricting process in the state, or political gridlock in the state courts. Nonetheless, if a state court does follow the Pennsylvania Supreme Court lead, we view the expected effects on limiting partisan gerrymandering to be potentially greater than we might expect under federal law, since they would involve the overturning of whole plans, not just individual districts. 
 \par
     Unlike all federal courts that have ruled on partisan gerrymandering to date, the Pennsylvania opinion does not require proof of intent to discriminate, which could make proving a violation easier under state law than under any likely federal standard. Moreover, although the Pennsylvania Supreme Court opinion does not require evidence of partisan effects, and emphasizes failure to comply with good government criteria, we believe that the \textit{LWV} opinion can be ``tweaked'' to address what \citet[][see also \citeyear{Grofman_Cervas_2018_ELJ}]{GrofmanCervas2018_WashPo} in their on-line essay in the \textit{Washington Post} refer to as \textit{stealth gerrymanders}, i.e., plans that satisfy good government redistricting criteria to a reasonable degree but are nonetheless carefully crafted invidious partisan gerrymanders in terms of their expected political impact. The reason for our optimism in this respect are the findings in the opinion that do address partisan effects of the Pennsylvania congressional map. 
 \par
@@ -147,7 +147,7 @@
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
 % ▀▄▀▄▀▄ SUBSECTION -- SUBSECTION -- SUBSECTION -- SUBSECTION -- ▄▀▄▀▄▀
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-        \subsection*{Institutional Measures}
+        \subsection*{Geographical Indicators}
 % ------ ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
 % =====================================================================
 % ▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟ ▄▀▄▀▄▀▀▄▀▄▀▄ T̟A̟B̟L̟E̟
@@ -246,7 +246,7 @@
 % =================================================================
     \underline{Positive} values favor Republicans, while \underline{negative} values favor Democrats. 
 \par
-    We now define these four measures of gerrymandering in which we will evaluate the four competing maps.
+    We now define these four measures of gerrymandering with which we will evaluate the four competing maps.
 %
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
 %     ↤↤↤↤↤ -------------- S̟U̟B̟-S̟U̟B̟S̟E̟C̟T̟I̟O̟N̟ -------------- ↦↦↦↦↦
@@ -287,7 +287,8 @@
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
     Among the more recent measures of gerrymandering is the \textit{Declination}. \textit{Declination} is an astronomical term referring to the angle on a compass, with a Latin root meaning ``a bending away''. For gerrymandering, it uses the angles created from ordering all of the districts by vote share, computing the mean vote-share for each party separately for the seats they won, and then comparing the differences in their distribution. To compare, a line is draw from the mean vote-share to the 0.5 line separately for each party. The angle formed from the different slopes of the line is called the \textit{declination}. An angle indicates whether a plan is a gerrymandering, under the logic that vote-shares should be distributed in some uniform manner across districts. If partisan are \textit{packed}, the angle will be greater. All values range between -1 and 1. Though we have defined the vote-share in terms of Republican outcomes, we adjusted the values such that \underline{negative} values are favorable to the Democrats. Further information on declination can be found in \citet{Warrington2018}.  
 \par
-    In our view, none of these four measures standing alone can be taken to be proof of gerrymandering. Rather we see them as potentially reinforcing indicators. Our own analyses have found hypotheticals where these measures can generate either a false positive or a false negative, but we have also found that consistent bias in the same direction is unlikely when we use multiple indicators (data omitted for space reasons). We will return to a discussion of the results later in this essay. Here we point out, however, all four indicators point clearly and overwhelmingly in the same direction vis-à-vis the 2011 Enacted plan -- namely that it is a blatant pro-Republican partisan gerrymander.
+\par
+    In our view, none of these four measures standing alone can be taken to be proof of gerrymandering. Rather we see them as potentially reinforcing indicators. Our own analyses have found hypotheticals where these measures can generate either a false positive or a false negative, but we have also found that consistent bias in the same direction is unlikely when we use multiple indicators (data omitted for space reasons). We will return to a discussion of the results later in this essay. Here we point out, however, all four indicators point clearly and overwhelmingly in the same direction vis-à-vis the 2011 Enacted plan, as Table \ref{tab:congsum} distinctly shows -- namely that it is a blatant pro-Republican partisan gerrymander.
 \par
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
 % ▀▄▀▄▀▄ SUBSECTION -- SUBSECTION -- SUBSECTION -- SUBSECTION -- ▄▀▄▀▄▀
@@ -341,9 +342,9 @@
 % -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE %
 % =================================================================
 \par
-    We need to check that our five-election composite offers a plausible basis for a prediction model that accounts for the idiosyncrasies inherent to congressional districts. Encouragingly, our five-election composite results is the same 13R-5D result that the 2016 congressional races delivered. Additionally, each district’s outcome is identical to the 2016 congressional district results, when we uniformly adjust in each district the projected vote based on the composite state-wide elections (the ``normal'' vote, without  congressional incumbency effects) by an amount equaling the difference between the statewide legislative vote and the the statewide congressional vote.
+    We need to check that our five-election composite offers a plausible basis for a prediction model that accounts for the idiosyncrasies inherent to congressional districts. Encouragingly, our five-election composite results is the same 13R-5D result that the 2016 congressional races delivered. Additionally, each district’s outcome is identical to the 2016 congressional district results when we uniformly adjust in each district the projected vote based on the composite state-wide elections (the ``normal'' vote, without  congressional incumbency effects) by an amount equaling the difference between the statewide legislative vote and the the statewide congressional vote.
 \par
-    When we look at the five election composite for the 2018 court remedial plan, we need to (a) adjust it for the actual statewide congressional Democratic vote share in 2018, and (b) to take into account this differential incumbency advantage that still benefits Republicans. Without doing so, the outcomes of the Court-ordered plan might have a wide range, with anywhere from a 5R to an 11R outcome possible because of the high number of competitive seats. However, when we take both factors into account by uniformly shifting the state-wide composite to reflect the 2018 statewide two-party congressional vote, and by adding in congressional incumbency advantage, which we have estimated in the 2012-2016 period to be on the order of magnitude of 4.3\% (analyses omitted for space reasons), we get a 9R-9D outcome as the most likely outcome in 2018 under the court-ordered map in our predictive model. Thus, our confidence in the five election projection method is further buttressed when we applied this method to predict the results of the 2018 election under the court-ordered remedial map in the light of the actual statewide aggregate results in 2018, and taking incumbency effects into account. In the congressional elections of 2018, the raw Republican two-party vote share in 2018 was 44.8\%, which represented a Democratic advantage, but not enough to overcome the twin barriers to a Democratic majority of over-concentration of Democratic support in urban areas and continued Republican incumbency advantage.
+    When we look at the five election composite for the 2018 court remedial plan, we need to (a) adjust it for the actual statewide congressional Democratic vote share in 2018, and (b) to take into account this differential incumbency advantage that still benefits Republicans. Without doing so, the outcomes of the Court-ordered plan might have a wide range, with anywhere from a 5R to an 11R outcome possible because of the high number of competitive seats. However, when we take both factors into account by uniformly shifting the state-wide composite to reflect the 2018 statewide two-party congressional vote, and by adding in congressional incumbency advantage, which we have estimated in the 2012-2016 period to be on the order of magnitude of 4.3\% (analyses omitted for space reasons, \citet[see ][]{GelmenKing1990_inc_AJPS}), we get a 9R-9D outcome as the most likely outcome in 2018 under the court-ordered map in our predictive model. Thus, our confidence in the five election projection method is further buttressed when we applied this method to predict the results of the 2018 election under the court-ordered remedial map in the light of the actual statewide aggregate results in 2018, and taking incumbency effects into account. In the congressional elections of 2018, the raw Republican two-party vote share in 2018 was 44.8\%, which represented a Democratic advantage, but not enough to overcome the twin barriers to a Democratic majority of over-concentration of Democratic support in urban areas and continued Republican incumbency advantage.
 % ================================================================= 
 % -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE --- %
 % -----------------------------------------------------------------     
@@ -371,9 +372,9 @@
         \begin{center}\textbf{INSERT TABLE \ref{tab:gerry} ABOUT HERE} \end{center}
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
 \par
-    The findings from Table \ref{tab:gerry} are very clear; regardless of which metric we examine, the 2011 map is the most gerrymandered. Not surprisingly, the nature of the bias is in a pro-Republican direction. Given the cumulative weight of all the evidence, the 2011 congressional map was clearly an egregious pro-Republican gerrymander. All four measures of potential gerrymandering are statistically significant for the 2011 map. In contrast, as we might expect, the court-ordered plan, prepared by a respected expert whose instructions were to satisfy good government criteria, was by a considerable margin the closest to a perfectly neutral plan in partisan terms according to all four measures. Indeed, none of the four measures of potential gerrymandering is statistically significant for the court-ordered map. And when we turn to the Republican Joint Legislative plan we find that all four measures are again statistically significant.  
+    The findings from Table \ref{tab:gerry} are very clear; regardless of which metric we examine, the 2011 map is the most gerrymandered. Not surprisingly, the nature of the bias is in a pro-Republican direction. Given the cumulative weight of all the evidence, the 2011 congressional map was clearly an egregious pro-Republican gerrymander. All four measures of potential gerrymandering are statistically significant for the 2011 map using the composite simulations. In contrast, as we might expect, the court-ordered plan, prepared by a respected expert whose instructions were to satisfy good government criteria, was by a considerable margin the closest to a perfectly neutral plan in partisan terms according to all four measures. Indeed, none of the four measures of potential gerrymandering is statistically significant for the court-ordered map. And when we turn to the Republican Joint Legislative plan we find that all four measures are again statistically significant.  
 \par
-    Finally, we return to the plan offered by the Democratic governor, Governor Wolf. To our surprise, this plan appeared to have a pro-Republican tilt, nearly to the same extent as the joint legislative plan for three of the four metrics in Table \ref{tab:gerry}. This puzzling finding suggests that the Governor might have been under pressure from Democratic incumbents not to reduce their expected vote margins, or that he sincerely intended it to be a compromise that the Republican legislature might agree to. However, as shown in \ref{tab:gerry}, two of the apparent pro-Republican indicators for the plan are statistically insignificant. Moreover, there is one important difference between the joint plan and that of the Governor: among the seven districts likely to be won by Democrats, the Democratic percentages are cut more narrowly in the Republican plan than in the Governor’s plan in three of the districts so that, in a good Republican year, Republicans will do better under their plan than under the Democratic plan.
+    Finally, we return to the plan offered by the Democratic governor, Governor Wolf. To our surprise, this plan appeared to have a pro-Republican tilt, though not to the same extent as either the 2011 enacted plan or the Republican alternative. This somewhat puzzling finding suggests that the Governor might have been under pressure from Democratic incumbents not to reduce their expected vote margins, or that he sincerely intended it to be a compromise that the Republican legislature might agree to. However, as shown in \ref{tab:gerry}, two of the apparent pro-Republican indicators for the plan are statistically insignificant. Moreover, there is one important difference between the joint plan and that of the Governor: among the seven districts likely to be won by Democrats, the Democratic percentages are cut more narrowly in the Republican plan than in the Governor’s plan in three of the districts so that, in a good Republican year, Republicans will do better under their plan than under the Democratic plan.
 \par
 % =================================================================
 % -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE  % 
