--- a/Latex/anon.tex
+++ b/Latex/anon.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % =================================================================
-\title{Tools for Identifying Partisan Gerrymandering (PA)}
+\title{Tools for Identifying Partisan Gerrymandering}
 \author{Identifying Information Removed}
 % 
 %
@@ -13,7 +13,7 @@
 % Accepted: 
 % =================================================================
 \documentclass[12pt, a4paper, twoside]{article}
-\RequirePackage{cervasanon}
+\RequirePackage{anon}
 % _________________________________________________________________
 %
 % _________________________________________________________________
@@ -25,15 +25,14 @@
 % =================================================================
 %
 \begin{document}
-    \authorone{Identifying Information Removed}
-        \institone{Identifying Information Removed}
-    \authortwo{}
+    \authorone{}
+        \institone{}
         \instittwo{}
     \titlerunning{Tools for Identifying Partisan Gerrymandering}
-    \subtitle{}
-    \status{Under Review}
+    \subtitle{With an Application to Congressional Districting in Pennsylvania}
+    \status{Revised}
     \data{REDACTED}
-    \abstract{In League of Women Voters v. Commonwealth of Pennsylvania (2018) the Pennsylvania Supreme Court struck down as a “severe and durable” partisan gerrymander the congressional map drawn by Republicans in 2011 and used in elections from 2012-2016.  It did so entirely on state law grounds after a three-judge federal court had rejected issuing a preliminary injunction against the plan. After Pennsylvania failed to enact a lawful remedy plan of its own (due to total disagreement as to how to proceed between the newly elected Democratic governor and the still Republican-controlled legislature), the Court then ordered into place for the 2018 election a map of its own drawn for it by a court-appointed consultant. In a split court, the Court map was endorsed only by judges with Democratic affiliations. Here we compare and contrast the 2011 and 2018 maps in terms of a variety of proposed metrics for detecting partisan gerrymandering. For further comparison purposes, we examine six proposed remedy plans. These include the remedy map proposed by the Republican legislators and that proposed by the Democratic governor, along with four other maps drawn conforming either entirely or substantially to what are often referred to as ``good government” standards, and with no election outcome or party registration data used in the creation of three of them. We argue that the 2011 map was a blatant and undisguised pro-Republican gerrymander, while the 2018 remedy map proposed by Republican legislators was a covert gerrymander (what we refer to as a stealth gerrymander); but that, as we would expect, the 2018 court drawn map can not be classified as a gerrymander.}
+    \abstract{In League of Women Voters v. Commonwealth of Pennsylvania (2018) the Pennsylvania Supreme Court struck down as a ``severe and durable” partisan gerrymander the congressional map drawn by Republicans in 2011 and used in elections from 2012-2016. It did so entirely on state law grounds after a three-judge federal court had rejected issuing a preliminary injunction against the plan. After Pennsylvania failed to enact a lawful remedy plan of its own (due to total disagreement as to how to proceed between the newly elected Democratic governor and the still Republican-controlled legislature), the Court then ordered into place for the 2018 election a map of its own drawn for it by a court-appointed consultant. In a split court, the Court map was endorsed only by judges with Democratic affiliations. Here we compare the 2011 and 2018 congressional maps in terms of a variety of proposed metrics for detecting partisan gerrymandering. We also examine the remedy map proposed by a group of Republican legislators and that proposed by the Democratic governor. We conclude that the 2011 map was a blatant and undisguised pro-Republican gerrymander. Moreover, the remedy map proposed by Republican legislators was a covert pro-Republican gerrymander (what we refer to as a ``stealth gerrymander”). The Democratic governor's proposed plan cannot be classified as a pro-Democratic gerrymander and indeed has, if anything, a slight pro-Republican tilt.  The 2018 court-drawn remedial map, by all measures, was not a gerrymander.}
     
    
 % ================================================================= 
@@ -45,25 +44,12 @@
 %        \doublespacing
 %        \linenumbers
 %
-\input{maintext.tex}
+\input{_maintext.tex}
 
 
 
-\singlespacing
-\iffalse
-\clearpage
-\input{Tables/table1.tex}
-\clearpage
-\input{Tables/table2.tex}
-\clearpage
-\input{Tables/table3.tex}
-\clearpage
-\input{Figures/figure1.tex}
-\clearpage
-\input{Figures/figure2.tex}
-\fi
-% - Bibliography
-\clearpage
+
+
     \nolinenumbers
     \newgeometry{
 		top=1in,
@@ -74,25 +60,19 @@
 		ignorefoot,
 		nomarginpar,
 	}
+
 \begin{multicols}{2}
-    \footnotesize{\bibliography{bib}}   % Bibliography linked to bib.bib
+    \footnotesize{\bibliography{library}}   % Bibliography linked to bib.bib
 \end{multicols}
+
+
+
 
 
 \setcounter{section}{0} \renewcommand{\thesection}{Appendix \Alph{section}}
 
 \clearpage
 
-%\section{\ref{app:A} -- Methodological Appendix}
-    %\linenumbers
-    %\doublespacing
-    %\vspace{.5in}
-        %\input{appendixA.tex}
-    %\clearpage
-        %\input{Tables/tablea1.tex}
-    %\clearpage
-        %\input{Figures/figureA1.tex}
-    %\clearpage
 
 
 \end{document}
