--- a/Latex/Figures/_fig_maps.tex
+++ b/Latex/Figures/_fig_maps.tex
@@ -9,7 +9,7 @@
     \label{fig:maps}
     \includegraphics[width=1\textwidth]{Figures/fig_maps.pdf}
     \end{center}
-    \tabnotes{Maps a drawn with a Mercator projection. Shapefiles were obtained from the Pennsylvania Supreme Court website for the four government plans.}
+    \tabnotes{Maps a drawn with a Lambert Conformal Conic projection. Shapefiles were obtained from the Pennsylvania Supreme Court website for the four government plans.}
 \end{figure}
 % ---------------------------------------------------------------------
 % ▀▄▀▄▀▄ E͎N͎D͎ F͎I͎G͎U͎R͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ F͎I͎G͎U͎R͎E͎ ▄▀▄▀▄▀▀▄▀▄▀▄ E͎N͎D͎ F͎I͎G͎U͎R͎E͎ ▄▀▄
